# Quant

./: .dockerignore  .gitignore  AGENTS.md  Alpha Rating Discussion_2026-03-20 23_44_29.md  Dockerfile  Dockerfile.orchestrator.strict  GITHUB_SETUP.md  PHASE_QUEUE.md  PRD.md  PRODUCT_SPEC.md  README.md  all_wrds_libs.txt  allocator_cpcv.sql  app.py  audit_output.txt  crisis_output.txt  dashboard.py  final_matrix.txt  final_scan_results.txt  fourier_output.txt  launch.py  main_bot_orchestrator.py  main_console.py  orbis_all_tables.txt  out.txt  out2.txt  out_100.txt  out_1990.txt  out_com.txt  out_decades.txt  out_deriv.txt  out_deriv_macro.txt  out_infinity.txt  output.txt  phase12_completion_report.md  phase35_completion_report.md  phase3_completion_report.md  production_verification_report.md  pyproject.toml  quad_output.txt  (+12 more)
backtests/: analyze_tournament.py  diagnose_phase15_failure.py  event_study_csco.py  inspect_data_coverage.py  optimize_phase16_parameters.py  verify_phase13_walkforward.py  verify_phase15_alpha_walkforward.py  verify_regime_history.py
core/: __init__.py  async_drift_worker.py  auto_backtest_control_plane.py  baseline_registry.py  dashboard_control_plane.py  dashboard_escalation.py  data_orchestrator.py  drift_alert_manager.py  drift_detector.py  drift_score_normalizer.py  engine.py  escalation_config.py  escalation_manager.py  etl.py  instrument_mapper.py  optimizer.py  release_metadata.py  security_policy.py  telemetry_events.py  telemetry_spool.py
dashboard/: app.py
data/: auto_update.py  build_macro_tri.py  build_sector_map.py  updater.py  (+20 more)
(+1893 files in other folders)
